# tryAndroid

./: README.md  build.gradle  ffmpeg.txt  keypwd  keystore
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Analyze.cpp  Analyze.h  MixAudio.cpp  MixAudio.h
app/src/main/res/anim/: item_animation_scale.xml  layout_animation_fade_scale.xml  rotate.xml  slide_in_down.xml  slide_in_up.xml  text_scale.xml
app/src/main/res/drawable/: active_indicator_icon.xml  analyzer_subscribe_btn.xml  app_edittext.xml  app_fingerprint.xml  app_greenbtn.xml  app_logo.xml  app_nextbtn.xml  app_pagination_drak_dot.xml  app_pagination_green_dot.xml  app_whilelogowithname.xml  app_whitebtn.xml  audio_destination.xml  audio_file_icon.xml  border_bottom.xml  bpm_done.xml  btn_multi_pause.xml  chat_date_bg.xml  chat_in_bg.xml  chat_progress_bg.xml  close_icon.xml  create_icon.xml  default_profile_picture.xml  delete_red.xml  dropdown.xml  editprofile_et.xml  engineer_delete_btn.xml  engineer_top_bar.xml  float_icon_plus.xml  gray_border_btn.xml  gray_btn_long.xml  gray_button.xml  gray_logo.xml  gray_radio_selected.xml  gray_radio_unselected.xml  hthread.xml  ic_add_action_button.xml  ic_add_doc_icon.xml  ic_add_images_icon.xml  ic_analyze_icon.xml  ic_analyze_music.xml  (+116 more)
app/src/main/res/drawable-v23/: splash_screen.xml
app/src/main/res/font-v26/: avenir_black.xml
app/src/main/res/layout/: activity_accept_invitation.xml  activity_artist_creation.xml  activity_change_password.xml  (+134 more)
app/src/main/res/layout-v21/: toolbar.xml
(+206 files in other folders)
